[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/farmerid.gd" type="Script" id=1]
[ext_resource path="res://scenes/HACKEAM.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.642944, 0.74122, 0.894531, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.613281, 0.306641, 0.306641, 1 )
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Corner Radius" ]

[node name="Node" type="Node"]

script = ExtResource( 1 )

[node name="HACKEAM" type="Sprite" parent="." index="0"]

position = Vector2( 253.667, 130.893 )
scale = Vector2( 0.351289, 0.365477 )
texture = ExtResource( 2 )

[node name="id" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 29.0
margin_top = 306.0
margin_right = 93.0
margin_bottom = 320.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Farmer ID"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors" ]

[node name="Data" type="RichTextLabel" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 39.0
margin_top = 402.0
margin_right = 236.0
margin_bottom = 472.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "Name - TEST NAME
Gender - M
Phone Number - 000000000
"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Name - TEST NAME
Gender - M
Phone Number - 000000000
"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Rect", "custom_colors" ]

[node name="newwork" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 125.0
margin_top = 574.0
margin_right = 202.0
margin_bottom = 608.0
rect_scale = Vector2( 2.5, 2.5 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/normal = SubResource( 1 )
custom_colors/font_color = Color( 0.315552, 0.367188, 0.338142, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "New Work"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_styles" ]

[node name="oldwork" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 99.0
margin_top = 696.0
margin_right = 203.0
margin_bottom = 730.0
rect_scale = Vector2( 2.5, 2.5 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/normal = SubResource( 1 )
custom_colors/font_color = Color( 0.315552, 0.367188, 0.338142, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Previous Work"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="logout" type="Button" parent="." index="5"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -116.0
margin_top = 16.0
margin_right = -50.0
margin_bottom = 45.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Logout"
flat = true
align = 1
_sections_unfolded = [ "Rect", "custom_colors" ]

[connection signal="pressed" from="newwork" to="." method="_on_newwork_pressed"]

[connection signal="pressed" from="logout" to="." method="_on_logout_pressed"]


